# ajo

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  SETUP.md  SUBMISSION.md  package.json  vercel.json
.cargo/: config.toml
.superstack/: IMPLEMENTATION_ROADMAP.md  QUICK_START.sh  SCAFFOLD_COMPLETE.md  build-context.md  idea-context.md
app/: .env.local.example  next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/faucet/: route.ts
app/src/app/docs/: page.tsx
app/src/components/: Create.tsx  Dashboard.tsx  Discover.tsx  Icon.tsx  Landing.tsx  Logo.tsx  Modals.tsx  PoolDetail.tsx  Profile.tsx  Shell.tsx
app/src/lib/: ajo-idl.json  anchor-client.ts  data.ts  hooks.ts  magicblock.ts  types.ts
app/src/styles/: design-system.css  landing.css
programs/ajo/: Cargo.toml
programs/ajo/src/: errors.rs  lib.rs
programs/ajo/src/instructions/: claim_slashed_funds.rs  contribute.rs  create_pool.rs  execute_payout.rs  mod.rs  vote_slash.rs
programs/ajo/src/state/: member.rs  mod.rs  pool.rs  voting.rs
programs/ajo/tests/: integration_tests.rs
