[package]
name = "ajo"
version = "0.1.0"
description = "Trustless rotating savings protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ajo"
path = "src/lib.rs"

[features]
default = []
cpi = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.2", features = ["token"] }

[dev-dependencies]
